welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:6: error: Invalid literal number
for(i<-1to 8)
       ^Runner:11: error: Invalid literal number
for(i<-1to 8)
       ^Runner:21: error: ')' expected but '}' found.
	}
        ^